HEAD
	+ Remove useless code due to offer 2013
	+ Added new i18n editions
	+ Store an ad message instead of enforcing max number of users
	  in the registration check
	+ Now the module has support to store ad messages
2.2.15
	+ Show a note when no backup credentials are found even if
	  Disaster Recovery is available for the server
	+ Bugfix: subs-level does not fail if no backup credentials found
	+ Fix file permissions when copying the MOTD template
2.2.14
	+ Include edition in MOTD and remove upgrade precise announcement
2.2.13
	+ Added automatic-conf-backup strict
	+ Make required changes for new communications add-on
	  (mailfilter in community + jabber and asterisk in comm add-on)
2.2.12
	+ Do not use IP addresses when using public SOAP methods
	+ Adapt configuration for new cloud infrastructure
	+ Do not set local address for TCP connections
	+ Avoid division by zero showing DR info
	+ Remove admin port when unsubscribing
2.2.11
	+ Stick to the current subscription capabilities if it is
	  impossible to know the current ones
2.2.10
	+ Added logic for new mail add-on for SB edition
2.2.9
	+ New registration form on subscription wizard
2.2.8
	+ Removed restrictions on virt and vpn when subscribing
2.2.7
	+ Check available options before subscribing if more than option
	  is available
	+ Added REST client as interface with Zentyal Cloud
2.2.6
	+ New subscription wizard
2.2.5
	+ Add position, subscribe to newsletter and legal notice for basic
	  subscription wizard using new 2.2 API
2.2.4
	+ Check against weak passwords when using wizard
	+ Adapted messages in the UI for new editions
	+ Add new server editions
	+ New checks for Small Business edition
	+ Use direct connection to QA repository even using a global proxy
2.2.3
	+ Set off-office hours for module cron jobs
	+ Show the number of available IDS rules in the Advanced Security
	  Updates model
	+ Do not clear cache when restarting the remoteservices module